--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <div class="container">
     <h1>PSG - PS Guides</h1>
     <p>Welcome To PSG (PS-Guides), This Website Is For Guides/Tutorials On How To Softmod (Or Hardmod) Your Playstation!</p>
+    <p>Now Open-Sourced On Github!</p>
     <div class="nav">
+      <a href="https://github.com/UnsyncedMaster/PSGuides">Github Page</a>
       <a href="/ps1.html">PlayStation (PS1)</a>
       <a href="/ps2.html">PlayStation 2 (PS2)</a>
       <a href="/psp.html">PlayStation Portable (PSP)</a>
@@ -21,9 +23,8 @@
       <a href="/downloads.html">Downloads</a>
     </div>
         <div class="footer">
-      &copy; 2025 PS Guides, For Educational Purposes.
+      &copy; 2025 PS Guides, For Educational Purposes. <a href="https://github.com/UnsyncedMaster/PSGuides">Github</a>
     </div>
   </div>
 </body>
-
 </html>
