--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <p>Now Open-Sourced On Github!</p>
     <div class="nav">
       <a href="https://github.com/UnsyncedMaster/PSGuides">Github Page</a>
-      <a href="/ps1.html">PlayStation (PS1)</a>
-      <a href="/ps2.html">PlayStation 2 (PS2)</a>
-      <a href="/psp.html">PlayStation Portable (PSP)</a>
-      <a href="/ps3.html">PlayStation 3 (PS3)</a>
-      <a href="/psvita.html">PlayStation Vita (PS Vita)</a>
-      <a href="/ps4.html">PlayStation 4 (PS4)</a>
-      <a href="/ps5.html">PlayStation 5 (PS5)</a>
-      <a href="/downloads.html">Downloads</a>
+      <a href="ps1.html">PlayStation (PS1)</a>
+      <a href="ps2.html">PlayStation 2 (PS2)</a>
+      <a href="psp.html">PlayStation Portable (PSP)</a>
+      <a href="ps3.html">PlayStation 3 (PS3)</a>
+      <a href="psvita.html">PlayStation Vita (PS Vita)</a>
+      <a href="ps4.html">PlayStation 4 (PS4)</a>
+      <a href="ps5.html">PlayStation 5 (PS5)</a>
+      <a href="downloads.html">Downloads</a>
     </div>
         <div class="footer">
       &copy; 2025 PS Guides, For Educational Purposes. <a href="https://github.com/UnsyncedMaster/PSGuides">Github</a>
