--- a/downloads.html
+++ b/downloads.html
@@ -13,7 +13,7 @@
     <p>Essential Tools And Files For Your PS1</p>
     <ul class="download-list">
       <li><a href="https://github.com/brad-lin/FreePSXBoot/releases/download/v2.1/freepsxboot-2.1.zip">FreePSXBoot</a> – For Softmodding Your PS1 (Kind Of Like FMCB For PS2)</li>
-      <li><a href="/ps1mcdiags.html">Modchip Diagrams</a> – Wiring Guides By Model/Modchip</li>
+      <li><a href="ps1mcdiags.html">Modchip Diagrams</a> – Wiring Guides By Model/Modchip</li>
       <li><a href="https://download.imgburn.com/SetupImgBurn_2.5.8.0.exe">ImgBurn</a> – Great Tool To Burn CD-R's For Your Games (Or Music For That Matter)</li>
       <li><a href="#">PSX Loader Utilities</a> – File launchers, region patchers, and more</li>
       <li><a href="https://github.com/ShendoXT/memcardrex/releases/download/9909f69/MemcardRex.2.0.RC1.zip">Memcardrex</a> - Advanced PS1 Memory Card Editor With Support For The PSP And PS3's VMCs</li>
