--- a/not_found.html
+++ b/not_found.html
@@ -10,10 +10,10 @@
   <div class="center">
     <h1>404</h1>
     <p>Oof! You Hit A Dead Sector Dude... 404 Page Not Found :(</p>
-    <p><a href="/index.html">Return To Safety</a></p>
+    <p><a href="index.html">Return To Safety</a></p>
   </div>
   
-          <div class="footer">
+    <div class="footer">
       &copy; 2025 PS Guides, For Educational Purposes.
     </div>
 </body>
