--- a/ps1mcdiags.html
+++ b/ps1mcdiags.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>PSG - PS Guides</title>
 </head>
 <body>
@@ -11,13 +11,13 @@
     <h1>PSG - PS Guides</h1>
     <p>These Are Diagrams For Modchips On The PS1 (Shoutout To Kippykip For These!)</p>
     <div class="nav">
-      <a href="SCPH-102.jpg">HQOneChip Diagram (SCPH-102 PM-41)</a>
-      <a href="SCPH-100101103.jpg">PHQMM3 Diagram (SCPH-100 101 103 PM-41)</a>
-      <a href="SCPH-100X300035005000.jpg">PHQMM3 Diagram (SCPH-100X 3000 3500 5000 PU-8)</a>
-      <a href="SCPH-500X550X5552.jpg">PHQMM3 Diagram (SCPH-500X 550X 5552 PU-18)</a>
-      <a href="SCPH-700X.jpg">PHQMM3 Diagram (SCPH-700X PU-20)</a>
-      <a href="SCPH-900X.jpg">PHQMM3 Diagram (SCPH-900X PU-22/PU-23)</a>
-      <p><a href="index.html">&larr; Back to Home</a></p>
+      <a href="/SCPH-102.jpg">HQOneChip Diagram (SCPH-102 PM-41)</a>
+      <a href="/SCPH-100101103.jpg">PHQMM3 Diagram (SCPH-100 101 103 PM-41)</a>
+      <a href="/SCPH-100X300035005000.jpg">PHQMM3 Diagram (SCPH-100X 3000 3500 5000 PU-8)</a>
+      <a href="/SCPH-500X550X5552.jpg">PHQMM3 Diagram (SCPH-500X 550X 5552 PU-18)</a>
+      <a href="/SCPH-700X.jpg">PHQMM3 Diagram (SCPH-700X PU-20)</a>
+      <a href="/SCPH-900X.jpg">PHQMM3 Diagram (SCPH-900X PU-22/PU-23)</a>
+      <p><a href="/index.html">&larr; Back to Home</a></p>
     </div>
   </div>
         <div class="footer">
