--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>PSG - PS Guides</title>
 </head>
 <body>
   <div class="container">
     <h1>PSG - PS Guides</h1>
     <p>Welcome To PSG (PS-Guides), This Website Is For Guides/Tutorials On How To Softmod (Or Hardmod) Your Playstation!</p>
-    <p>Now Open-Sourced On Github!</p>
     <div class="nav">
-      <a href="https://github.com/UnsyncedMaster/PSGuides">Github Page</a>
-      <a href="ps1.html">PlayStation (PS1)</a>
-      <a href="ps2.html">PlayStation 2 (PS2)</a>
-      <a href="psp.html">PlayStation Portable (PSP)</a>
-      <a href="ps3.html">PlayStation 3 (PS3)</a>
-      <a href="psvita.html">PlayStation Vita (PS Vita)</a>
-      <a href="ps4.html">PlayStation 4 (PS4)</a>
-      <a href="ps5.html">PlayStation 5 (PS5)</a>
-      <a href="downloads.html">Downloads</a>
+      <a href="/ps1.html">PlayStation (PS1)</a>
+      <a href="/ps2.html">PlayStation 2 (PS2)</a>
+      <a href="/psp.html">PlayStation Portable (PSP)</a>
+      <a href="/ps3.html">PlayStation 3 (PS3)</a>
+      <a href="/psvita.html">PlayStation Vita (PS Vita)</a>
+      <a href="/ps4.html">PlayStation 4 (PS4)</a>
+      <a href="/ps5.html">PlayStation 5 (PS5)</a>
+      <a href="/downloads.html">Downloads</a>
     </div>
         <div class="footer">
-      &copy; 2025 PS Guides, For Educational Purposes. <a href="https://github.com/UnsyncedMaster/PSGuides">Github</a>
+      &copy; 2025 PS Guides, For Educational Purposes.
     </div>
   </div>
 </body>
+
 </html>
